--- a/configuration.yaml
+++ b/configuration.yaml
@@ -60,6 +60,8 @@ mqtt:
 ifttt:
   key: !secret ifttt_key
 
+notify: !include_dir_merge_list notify
+
 scene: !include scene.yaml
 automation: !include_dir_merge_list automation
 
