Move marks_bedroom_amp to marks_bedroom_lamp

--- a/lights/rfxtrx_lights.yaml
+++ b/lights/rfxtrx_lights.yaml
@@ -11,3 +11,5 @@
       name: Dimmer Remote 3
     0a140024f3cf3504010080:
       name: Dimmer Remote 4
+    0a140000f15c7201010080:
+      name: Mark's Bedroom Lamp
