--- a/groups.yaml
+++ b/groups.yaml
@@ -256,11 +256,11 @@ marks_bedroom_lights:
   entities:
   - light.fibaro_system_fgd212_dimmer_2_level_39
   - light.bedroom_mark_level_39
+  - light.marks_bedroom_lamp
   name: Mark's Bedroom Lights
   view: false
 marks_bedroom_appliances:
   entities:
-  - switch.marks_bedroom_amp
   name: Mark's Bedroom Appliances
   view: false
 
