--- a/lights/mock_lights.yaml
+++ b/lights/mock_lights.yaml
@@ -44,6 +44,12 @@
   payload_off: 'OFF'
   payload_on: 'ON'
   platform: mqtt
+- command_topic: ha/mock/bedroom-mark/lamp/light/command
+  name: Mark's Bedroom Lamp
+  optimistic: true
+  payload_off: 'OFF'
+  payload_on: 'ON'
+  platform: mqtt
 - brightness_command_topic: ha/mock/bedroom_mark/overhead/brightness/command
   brightness_scale: 100
   command_topic: ha/mock/bedroom_mark/overhead/dimmer/command
