--- a/configuration.yaml
+++ b/configuration.yaml
@@ -70,6 +70,6 @@ media_player: !include_dir_merge_list media_players
 light: !include_dir_merge_list lights
 sensor: !include_dir_merge_list sensors
 switch: !include_dir_merge_list switches
-climate: !include_dir_merge_list thermostats
+#climate: !include_dir_merge_list thermostats
 input_boolean: !include_dir_merge_named input_boolean
 input_select: !include_dir_merge_named input_select
