On Demand: virtual thermostats for each zwave TRV

--- a/thermostats/static_thermostats.yaml
+++ b/thermostats/static_thermostats.yaml
@@ -1,1 +1,72 @@
-# Static
+# On Demand virtual thermostats
+- heater: switch.study_demand
+  max_temp: 25
+  min_temp: 5
+  name: study_west_thermostat
+  platform: generic_thermostat
+  target_sensor: sensor.study_west_temperature_15_1
+  target_temp: 10.0
+- heater: switch.study_demand
+  max_temp: 25
+  min_temp: 5
+  name: study_east_thermostat
+  platform: generic_thermostat
+  target_sensor: sensor.study_east_temperature_14_1
+  target_temp: 10.0
+- heater: switch.lounge_demand
+  max_temp: 25
+  min_temp: 5
+  name: lounge_east_thermostat
+  platform: generic_thermostat
+  target_sensor: sensor.lounge_east_temperature_30_1
+  target_temp: 10.0
+- heater: switch.marks_bedroom_demand
+  max_temp: 25
+  min_temp: 5
+  name: bedroom_mark_thermostat
+  platform: generic_thermostat
+  target_sensor: sensor.bedroom_mark_temperature_29_1
+  target_temp: 10.0
+- heater: switch.kitchen_demand
+  max_temp: 25
+  min_temp: 5
+  name: kitchen_thermostat
+  platform: generic_thermostat
+  target_sensor: sensor.kitchen_temperature_34_1
+  target_temp: 10.0
+- heater: switch.ballroom_demand
+  max_temp: 25
+  min_temp: 5
+  name: ballroom_east_thermostat
+  platform: generic_thermostat
+  target_sensor: sensor.ballroom_east_temperature_33_1
+  target_temp: 10.0
+- heater: switch.library_demand
+  max_temp: 25
+  min_temp: 5
+  name: library_thermostat
+  platform: generic_thermostat
+  target_sensor: sensor.library_temperature_25_1
+  target_temp: 10.0
+- heater: switch.hall_demand
+  max_temp: 25
+  min_temp: 5
+  name: hall_west_thermostat
+  platform: generic_thermostat
+  target_sensor: sensor.hall_west_temperature_13_1
+  target_temp: 10.0
+- heater: switch.hall_demand
+  max_temp: 25
+  min_temp: 5
+  name: hall_east_thermostat
+  platform: generic_thermostat
+  target_sensor: sensor.hall_east_temperature_24_1
+  target_temp: 10.0
+- heater: switch.hall_demand
+  max_temp: 25
+  min_temp: 5
+  name: hall_annex_thermostat
+  platform: generic_thermostat
+  target_sensor: sensor.hall_annex_temperature_43_1
+  target_temp: 10.0
+
