--- a/automation/heating-on-demand.yaml
+++ b/automation/heating-on-demand.yaml
@@ -19,43 +19,62 @@
     service: switch.turn_off
     entity_id: switch.horstmann_unknown_type0003_id0002_switch_36_0
 
-- alias: "Study Setpoint Tx"
+# Map virtual setpoint to real setpoint
+- alias: "Set Real Thermostat"
   trigger:
     - platform: state
-      entity_id: climate.study_west_thermostat
+      entity_id: climate.study_west_thermostat_15_1
+    - platform: state
+      entity_id: climate.study_east_thermostat_14_1
+    - platform: state
+      entity_id: climate.lounge_east_thermostat_30_1
+    - platform: state
+      entity_id: climate.bedroom_mark_thermostat_29_1
+    - platform: state
+      entity_id: climate.kitchen_thermostat_34_1
+    - platform: state
+      entity_id: climate.ballroom_east_thermostat_33_1
+    - platform: state
+      entity_id: climate.library_thermostat_25_1
+    - platform: state
+      entity_id: climate.hall_west_thermostat_13_1
+    - platform: state
+      entity_id: climate.hall_east_thermostat_24_1
+    - platform: state
+      entity_id: climate.hall_annex_thermostat_43_1
   action:
     - service: climate.set_temperature
-      data:
-        entity_id: climate.study_west_comfort_setpoint_15_1
-        temperature: trigger.to_state.attributes.temperature
+      data_template:
+        entity_id: '{{trigger.entity_id.replace("thermostat_", "comfort_setpoint_")}}'
+        temperature: '{{ trigger.to_state.attributes.temperature }}'
 
-- alias: "Study Setpoint Rx"
+
+# Map real setpoint to virtual setpoint
+- alias: "Set Virtual Thermostat"
   trigger:
     - platform: state
       entity_id: climate.study_west_comfort_setpoint_15_1
-  action:
-    - service: climate.set_temperature
-      data:
-        entity_id: climate.study_west_thermostat
-        temperature: trigger.to_state.attributes.temperature
-
-- alias: "Bedroom Mark Setpoint Tx"
-  trigger:
     - platform: state
-      entity_id: climate.bedroom_mark_thermostat
-  action:
-    - service: climate.set_temperature
-      data:
-        entity_id: climate.bedroom_mark_comfort_setpoint_29_1
-        temperature: trigger.to_state.attributes.temperature
-
-- alias: "Bedroom Mark Setpoint Rx"
-  trigger:
+      entity_id: climate.study_east_comfort_setpoint_14_1
+    - platform: state
+      entity_id: climate.lounge_east_comfort_setpoint_30_1
     - platform: state
       entity_id: climate.bedroom_mark_comfort_setpoint_29_1
+    - platform: state
+      entity_id: climate.kitchen_comfort_setpoint_34_1
+    - platform: state
+      entity_id: climate.ballroom_east_comfort_setpoint_33_1
+    - platform: state
+      entity_id: climate.library_comfort_setpoint_25_1
+    - platform: state
+      entity_id: climate.hall_west_comfort_setpoint_13_1
+    - platform: state
+      entity_id: climate.hall_east_comfort_setpoint_24_1
+    - platform: state
+      entity_id: climate.hall_annex_comfort_setpoint_43_1
   action:
     - service: climate.set_temperature
-      data:
-        entity_id: climate.bedroom_mark_thermostat
-        temperature: trigger.to_state.attributes.temperature
+      data_template:
+        entity_id: '{{trigger.entity_id.replace("comfort_setpoint_","thermostat_")}}'
+        temperature: '{{ trigger.to_state.attributes.temperature }}'
 
