--- a/groups.yaml
+++ b/groups.yaml
@@ -460,6 +460,21 @@ thermostats:
   name: Thermostats
   view: false
 
+generic_thermostats:
+  entities:
+  - climate.annex_hall_thermostat_43_1
+  - climate.ballroom_east_thermostat_33_1
+  - climate.bedroom_mark_thermostat_29_1
+  - climate.hall_east_thermostat_24_1
+  - climate.hall_west_thermostat_13_1
+  - climate.kitchen_thermostat_34_1
+  - climate.library_thermostat_25_1
+  - climate.lounge_east_thermostat_30_1
+  - climate.study_east_thermostat_14_1
+  - climate.study_west_thermostat_15_1
+  name: Generic Thermostats
+  view: false
+
 network: !include network.yaml
 
 #
