--- a/customize.yaml
+++ b/customize.yaml
@@ -5,6 +5,8 @@ group.barnacles:
 group.quick_scenes:
   order: 3
 
+group.all_automations:
+  hidden: false
 group.study:
   order: 1
 group.kitchen:
