--- a/scene.yaml
+++ b/scene.yaml
@@ -2,7 +2,7 @@
   entities:
     group.lounge_lights:
       state: off
-    climate.lounge_east_comfort_setpoint_30_1:
+    climate.lounge_east_thermostat_30_1:
       temperature: 10
     media_player.lounge:
       state: paused
@@ -11,30 +11,30 @@
     group.lounge_lights:
       state: on
       brightness: 20
-    climate.lounge_east_comfort_setpoint_30_1:
+    climate.lounge_east_thermostat_30_1:
       temperature: 20
 - name: Lounge Movie
   entities:
     group.lounge_lights:
       state: on
       brightness: 50
-    climate.lounge_east_comfort_setpoint_30_1:
+    climate.lounge_east_thermostat_30_1:
       temperature: 20
 - name: Lounge Bright
   entities:
     group.lounge_lights:
       state: on
       brightness: 100
-    climate.lounge_east_comfort_setpoint_30_1:
+    climate.lounge_east_thermostat_30_1:
       temperature: 20
 
 - name: Study Off
   entities:
     group.study_lights:
       state: off
-    climate.study_east_comfort_setpoint_14_1:
+    climate.study_east_thermostat_14_1:
       temperature: 10
-    climate.study_west_comfort_setpoint_15_1:
+    climate.study_west_thermostat_15_1:
       temperature: 10
     media_player.study:
       state: paused
@@ -43,18 +43,18 @@
     group.study_lights:
       state: on
       brightness: 100
-    climate.study_east_comfort_setpoint_14_1:
+    climate.study_east_thermostat_14_1:
       temperature: 20
-    climate.study_west_comfort_setpoint_15_1:
+    climate.study_west_thermostat_15_1:
       temperature: 20
 - name: Study Relax
   entities:
     group.study_lights:
       state: on
       brightness: 50
-    climate.study_east_comfort_setpoint_14_1:
+    climate.study_east_thermostat_14_1:
       temperature: 20
-    climate.study_west_comfort_setpoint_15_1:
+    climate.study_west_thermostat_15_1:
       temperature: 20
 
 - name: Mark's Bedroom Off
@@ -63,7 +63,7 @@
       state: off
     switch.marks_bedroom_appliances:
       state: off
-    climate.bedroom_mark_comfort_setpoint_29_1:
+    climate.bedroom_mark_thermostat_29_1:
       temperature: 10
     media_player.marks_bedroom:
       state: paused
@@ -71,20 +71,20 @@
   entities:
     group.marks_bedroom_lights:
       state: off
-    climate.bedroom_mark_comfort_setpoint_29_1:
+    climate.bedroom_mark_thermostat_29_1:
       temperature: 15
 - name: Mark's Bedroom Play
   entities:
     group.marks_bedroom_lights:
       state: on
-    climate.bedroom_mark_comfort_setpoint_29_1:
+    climate.bedroom_mark_thermostat_29_1:
       temperature: 20
 
 - name: Kitchen Off
   entities:
     group.kitchen_lights:
       state: off
-    climate.kitchen_comfort_setpoint_34_1:
+    climate.kitchen_thermostat_34_1:
       temperature: 10
     media_player.kitchen:
       state: paused
@@ -93,21 +93,21 @@
     group.kitchen_lights:
       state: on
       brightness: 50
-    climate.kitchen_comfort_setpoint_34_1:
+    climate.kitchen_thermostat_34_1:
       temperature: 20
 - name: Kitchen Bright
   entities:
     group.kitchen_lights:
       state: on
       brightness: 100
-    climate.kitchen_comfort_setpoint_34_1:
+    climate.kitchen_thermostat_34_1:
       temperature: 20
 
 - name: Ballroom Off
   entities:
     group.ballroom_lights:
       state: off
-    climate.ballroom_east_comfort_setpoint_33_1:
+    climate.ballroom_east_thermostat_33_1:
       temperature: 10
     media_player.ballroom:
       state: paused
@@ -116,27 +116,27 @@
     group.ballroom_lights:
       state: on
       brightness: 20
-    climate.ballroom_east_comfort_setpoint_33_1:
+    climate.ballroom_east_thermostat_33_1:
       temperature: 20
 - name: Ballroom Movie
   entities:
     group.ballroom_lights:
       state: off
-    climate.ballroom_east_comfort_setpoint_33_1:
+    climate.ballroom_east_thermostat_33_1:
       temperature: 20
 - name: Ballroom Bright
   entities:
     group.ballroom_lights:
       state: on
       brightness: 100
-    climate.ballroom_east_comfort_setpoint_33_1:
+    climate.ballroom_east_thermostat_33_1:
       temperature: 20
 
 - name: Library Off
   entities:
     group.library_lights:
       state: off
-    climate.library_comfort_setpoint_25_1:
+    climate.library_thermostat_25_1:
       temperature: 10
     media_player.library:
       state: paused
@@ -145,13 +145,13 @@
     group.library_lights:
       state: off
       brightness: 50
-    climate.library_comfort_setpoint_25_1:
+    climate.library_thermostat_25_1:
       temperature: 22
 - name: Library Read
   entities:
     group.library_lights:
       state: on
       brightness: 100
-    climate.library_comfort_setpoint_25_1:
+    climate.library_thermostat_25_1:
       temperature: 22
 
