--- a/automation/heating-on-demand.yaml
+++ b/automation/heating-on-demand.yaml
@@ -6,9 +6,12 @@
     entity_id: group.main_heating_demand
     to: 'on'
   action:
-    service: switch.turn_on
-    entity_id: switch.horstmann_unknown_type0003_id0002_switch_36_0
-
+    - service: switch.turn_on
+      entity_id: switch.horstmann_unknown_type0003_id0002_switch_36_0
+    - service: climate.set_temperature
+      data:
+        entity_id: climate.horstmann_scsc17_thermostat_heating_1_35_1
+        temperature: 22
 
 - alias: "Main Boiler Demand Off"
   trigger:
@@ -16,8 +19,38 @@
     entity_id: group.main_heating_demand
     to: 'off'
   action:
-    service: switch.turn_off
-    entity_id: switch.horstmann_unknown_type0003_id0002_switch_36_0
+    - service: switch.turn_off
+      entity_id: switch.horstmann_unknown_type0003_id0002_switch_36_0
+    - service: climate.set_temperature
+      data:
+        entity_id: climate.horstmann_scsc17_thermostat_heating_1_35_1
+        temperature: 15
+
+- alias: "Annex Thermostat Demand On"
+  trigger:
+    - platform: state
+      entity_id: group.annex_heating_demand
+      to: 'on'
+  action:
+    #- service: switch.turn_on
+    #  entity_id: switch.horstmann_unknown_type0003_id0002_switch_36_0
+    - service: climate.set_temperature
+      data:
+        entity_id: climate.horstmann_scsc17_thermostat_heating_1_50_1
+        temperature: 22
+
+- alias: "Annex Thermostat Demand Off"
+  trigger:
+    - platform: state
+      entity_id: group.annex_heating_demand
+      to: 'off'
+  action:
+    #- service: switch.turn_off
+    #  entity_id: switch.horstmann_unknown_type0003_id0002_switch_36_0
+    - service: climate.set_temperature
+      data:
+        entity_id: climate.horstmann_scsc17_thermostat_heating_1_50_1
+        temperature: 15
 
 # Map virtual setpoint to real setpoint
 - alias: "Set Real Thermostat"
