--- a/groups.yaml
+++ b/groups.yaml
@@ -206,6 +206,30 @@ ballroom_lights:
   name: Ballroom Lights
   view: false
 
+guest_room:
+  name: Guest Room
+  icon: mdi:hotel
+  view: true
+  entities:
+  - input_select.guest_room_select
+  - climate.danfoss_z_thermostat_014g0013_heating_1_52_1
+guest_room_scenes:
+  name: Guest Room
+  view: false
+  entities:
+  - input_select.guest_room_select
+guest_room_heating:
+  name: Guest Room Heating
+  view: false
+  entities:
+  - climate.danfoss_z_thermostat_014g0013_heating_1_52_1
+guest_room_setpoints:
+  name: Guest Room Setpoints
+  view: false
+  entities:
+  - climate.danfoss_z_thermostat_014g0013_heating_1_52_1
+
+
 bedroom_mark:
   entities:
   - media_player.marks_bedroom
