--- a/switches/mqtt_switches.yaml
+++ b/switches/mqtt_switches.yaml
@@ -46,3 +46,9 @@
   payload_on: 'ON'
   platform: mqtt
   retain: true
+- command_topic: ha/guest-room/demand/command
+  name: Guest Room Demand
+  payload_off: 'OFF'
+  payload_on: 'ON'
+  platform: mqtt
+  retain: true
