--- a/thermostats/mock_thermostats.yaml
+++ b/thermostats/mock_thermostats.yaml
@@ -58,4 +58,9 @@
   name: hall_annex_comfort_setpoint_43_1
   platform: generic_thermostat
   target_sensor: sensor.hall_annex_temperature_43_1
-
+- name: danfoss_z_thermostat_014g0013_heating_1_52_1
+  heater: switch.hall_demand
+  max_temp: 25
+  min_temp: 5
+  platform: generic_thermostat
+  target_sensor: sensor.guest_room_temperature_52_1
