--- a/customize.yaml
+++ b/customize.yaml
@@ -145,7 +145,7 @@ light.ballroom_east_level_33:
 light.kitchen_level_34:
   friendly_name: Kitchen Valve
 light.annex_hall_level_43:
-  friendly_name: Hall Annex Valve
+  friendly_name: Annex Hall Valve
 sensor.hall_west_temperature_13_1:
   friendly_name: Hall West Temperature
   polling_intensity: 5
@@ -174,7 +174,7 @@ sensor.kitchen_temperature_34_1:
   friendly_name: Kitchen Temperature
   polling_intensity: 5
 sensor.annex_hall_temperature_43_1:
-  friendly_name: Hall Annex Temperature
+  friendly_name: Annex Hall Temperature
   polling_intensity: 5
 
 sensor.main_heating_thermostat_battery:
@@ -214,7 +214,7 @@ sensor.kitchen_battery:
   friendly_name: Kitchen Battery
   icon: mdi:battery
 sensor.annex_hall_battery:
-  friendly_name: Hall Annex Battery
+  friendly_name: Annex Hall Battery
   icon: mdi:battery
 
 climate.hall_west_thermostat_13_1:
@@ -236,6 +236,6 @@ climate.ballroom_east_thermostat_33_1:
 climate.kitchen_thermostat_34_1:
   friendly_name: Kitchen Thermostat
 climate.annex_hall_thermostat_43_1:
-  friendly_name: Hall Annex Thermostat
+  friendly_name: Annex Hall Thermostat
 climate.danfoss_z_thermostat_014g0013_heating_1_52_1:
   friendly_name: Guest Room Thermostat
