--- a/people/thomas.yaml
+++ b/people/thomas.yaml
@@ -2,5 +2,6 @@ name: "Tom"
 entities:
 - device_tracker.thomas_phone
 - device_tracker.thomascmtcd
+- device_tracker.thomascmtcdhomewhalebarncom
 - device_tracker.thomassiphone
 - device_tracker.thomasmbp
