--- a/switches/mock_extra.yaml
+++ b/switches/mock_extra.yaml
@@ -34,3 +34,16 @@
   payload_on: 'ON'
   platform: mqtt
   retain: true
+
+- name: greenwave_powernode_1_port_switch_53_0
+  command_topic: ha/hottub/command
+  payload_off: 'OFF'
+  payload_on: 'ON'
+  platform: mqtt
+  retain: true
+- name: greenwave_powernode_1_port_switch_54_0
+  command_topic: ha/annex/powernode/command
+  payload_off: 'OFF'
+  payload_on: 'ON'
+  platform: mqtt
+  retain: true
