customize: use pot icon for Hottub reset

--- a/customize.yaml
+++ b/customize.yaml
@@ -244,6 +244,7 @@ climate.danfoss_z_thermostat_014g0013_heating_1_52_1:
 
 switch.greenwave_powernode_1_port_switch_53_0:
   friendly_name: Hot Tub
+  icon: mdi:pot
 sensor.greenwave_powernode_1_port_energy_53_0:
   friendly_name: Hot Tub Energy
 sensor.greenwave_powernode_1_port_power_53_8:
