--- a/automation/bedroom-mood-triggers.yaml
+++ b/automation/bedroom-mood-triggers.yaml
@@ -8,3 +8,12 @@
         entity_id: input_select.marks_bedroom_select
         option: "Sleep"
 
+- alias: "Mark's Bedroom Off Time"
+  trigger:
+    - platform: time
+      after: '09:00:00'
+  action:
+    - service: input_select.select_option
+      data:
+        entity_id: input_select.marks_bedroom_select
+        option: "Off"
