--- a/groups.yaml
+++ b/groups.yaml
@@ -391,9 +391,10 @@ user_automations:
   name: Automations
   entities:
   - automation.guest_room_sleep_time
+  - automation.guest_room_off_time
   - automation.kitchen_cosy_time
-  - automation.marks_bedroom_mood
   - automation.marks_bedroom_sleep_time
+  - automation.marks_bedroom_off_time
   - automation.reset_moods
   - automation.study_work_time
 
