--- a/automation/kitchen-mood-triggers.yaml
+++ b/automation/kitchen-mood-triggers.yaml
@@ -7,3 +7,21 @@
       data:
         entity_id: input_select.kitchen_select
         option: "Cosy"
+
+- alias: "Kitchen Off Time"
+  trigger:
+    - platform: time
+      after: '10:00:00'
+  condition:
+    - condition: time
+      weekday:
+        - mon
+        - tue
+        - wed
+        - thu
+        - fri
+  action:
+    - service: input_select.select_option
+      data:
+        entity_id: input_select.kitchen_select
+        option: "Off"
