--- a/automation/heating-on-demand.yaml
+++ b/automation/heating-on-demand.yaml
@@ -12,6 +12,10 @@
       data:
         entity_id: climate.horstmann_scsc17_thermostat_heating_1_35_1
         temperature: 22
+    - service: notify.automations
+      data:
+        message: "Main Heating Demand on"
+
 
 - alias: "Main Boiler Demand Off"
   trigger:
@@ -25,6 +29,9 @@
       data:
         entity_id: climate.horstmann_scsc17_thermostat_heating_1_35_1
         temperature: 10
+    - service: notify.automations
+      data:
+        message: "Main Heating Demand off"
 
 - alias: "Annex Thermostat Demand On"
   trigger:
@@ -38,6 +45,9 @@
       data:
         entity_id: climate.horstmann_scsc17_thermostat_heating_1_50_1
         temperature: 22
+    - service: notify.automations
+      data:
+        message: "Annex Heating Demand on"
 
 - alias: "Annex Thermostat Demand Off"
   trigger:
@@ -51,6 +61,9 @@
       data:
         entity_id: climate.horstmann_scsc17_thermostat_heating_1_50_1
         temperature: 10
+    - service: notify.automations
+      data:
+        message: "Annex Heating Demand off"
 
 # Map virtual setpoint to real setpoint
 - alias: "Set Real Thermostat"
