automation: fix Hot Water Notify

--- a/automation/hot-water.yaml
+++ b/automation/hot-water.yaml
@@ -81,5 +81,5 @@
       entity_id: switch.horstmann_unknown_type0003_id0002_switch_36_0_3
   action:
     - service: notify.automations
-      data:
-        message: "Hot Water is now {{ trigger.to_state.state }}"
+      data_template:
+        message: 'Hot Water is now {{ trigger.to_state.state }}'
