--- a/customize.yaml
+++ b/customize.yaml
@@ -228,7 +228,7 @@ climate.hall_east_thermostat_24_1:
 climate.library_thermostat_25_1:
   friendly_name: Library Thermostat
 climate.bedroom_mark_thermostat_29_1:
-  friendly_name: Mark's Bedroom Thermostat
+  friendly_name: "Mark's Bedroom Thermostat"
 climate.lounge_east_thermostat_30_1:
   friendly_name: Lounge East Thermostat
 climate.ballroom_east_thermostat_33_1:
@@ -247,3 +247,12 @@ sensor.greenwave_powernode_1_port_energy_53_0:
   friendly_name: Hot Tub Energy
 sensor.greenwave_powernode_1_port_power_53_8:
   friendly_name: Hot Tub Power
+
+sensor.eaton_ups_status:
+  friendly_name: UPS Status
+sensor.eaton_ups_load:
+  friendly_name: UPS Load
+sensor.eaton_battery_charge:
+  friendly_name: UPS Charge
+sensor.eaton_ups_battery_runtime:
+  friendly_name: UPS Runtime
