--- a/switches/mqtt_switches.yaml
+++ b/switches/mqtt_switches.yaml
@@ -52,3 +52,9 @@
   payload_on: 'ON'
   platform: mqtt
   retain: true
+- command_topic: ha/bedroom-jerome/demand/command
+  name: "Jerome's Bedroom Demand"
+  payload_off: 'OFF'
+  payload_on: 'ON'
+  platform: mqtt
+  retain: true
