--- a/automation/heating-on-demand.yaml
+++ b/automation/heating-on-demand.yaml
@@ -88,12 +88,13 @@
       entity_id: climate.hall_east_thermostat_24_1
     - platform: state
       entity_id: climate.annex_hall_thermostat_43_1
+    - platform: state
+      entity_id: climate.bedroom_jerome_thermostat_44_1
   action:
     - service: climate.set_temperature
       data_template:
         entity_id: '{{trigger.entity_id.replace("thermostat_", "comfort_setpoint_")}}'
         temperature: '{{ trigger.to_state.attributes.temperature }}'
-
 
 # Map real setpoint to virtual setpoint
 - alias: "Set Virtual Thermostat"
@@ -118,9 +119,30 @@
       entity_id: climate.hall_east_comfort_setpoint_24_1
     - platform: state
       entity_id: climate.annex_hall_comfort_setpoint_43_1
+    - platform: state
+      entity_id: climate.bedroom_jerome_comfort_setpoint_44_1
   action:
     - service: climate.set_temperature
       data_template:
         entity_id: '{{trigger.entity_id.replace("comfort_setpoint_","thermostat_")}}'
         temperature: '{{ trigger.to_state.attributes.temperature }}'
 
+- alias: "Set Jerome Real Thermostat"
+  trigger:
+    - platform: state
+      entity_id: climate.bedroom_jerome_thermostat_44_1
+  action:
+    - service: climate.set_temperature
+      data_template:
+        entity_id: climate.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_44_1
+        temperature: '{{ trigger.to_state.attributes.temperature }}'
+
+- alias: "Set Jerome Virtual Thermostat"
+  trigger:
+    - platform: state
+      entity_id: climate.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_44_1
+  action:
+    - service: climate.set_temperature
+      data_template:
+        entity_id: climate.bedroom_jerome_thermostat_44_1
+        temperature: '{{ trigger.to_state.attributes.temperature }}'
