--- a/thermostats/static_thermostats.yaml
+++ b/thermostats/static_thermostats.yaml
@@ -69,4 +69,11 @@
   platform: generic_thermostat
   target_sensor: sensor.annex_hall_temperature_43_1
   target_temp: 10.0
-
+- name: bedroom_jerome_thermostat_44_1
+  platform: generic_thermostat
+  heater: switch.jeromes_bedroom_demand
+  max_temp: 25
+  min_temp: 5
+  #target_sensor: sensor.bedroom_jerome_temperature_44_1
+  target_sensor: sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_44_1
+  target_temp: 10.0
