--- a/thermostats/mock_thermostats.yaml
+++ b/thermostats/mock_thermostats.yaml
@@ -64,3 +64,16 @@
   min_temp: 5
   platform: generic_thermostat
   target_sensor: sensor.guest_room_temperature_52_1
+
+- name: bedroom_jerome_comfort_setpoint_44_1
+  platform: generic_thermostat
+  heater: switch.jeromes_demand
+  max_temp: 25
+  min_temp: 5
+  target_sensor: sensor.bedroom_jerome_temperature_44_1
+- name: eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_44_1
+  platform: generic_thermostat
+  heater: switch.jeromes_demand
+  max_temp: 25
+  min_temp: 5
+  target_sensor: sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_44_1
